--- a/public/index.html
+++ b/public/index.html
@@ -6,17 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Sugmovie is a free movie suggestor that help people to find quality movies to watch. And also free torrent movie's download"
+    name="description"
+    content="Sugmovie is a free movie suggestor that help people to find quality movies to watch. And also free torrent movie's download"
     />
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/sugmovie_192.png" />
-    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
     <title>Sugmovie</title>
-  </head>
+    </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
