add 404-err page

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,14 @@
     content="Sugmovie is a free movie suggestor that help people to find quality movies to watch. And also free torrent movie's download"
     />
     <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QVBSX2VGWH"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-QVBSX2VGWH');
+    </script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/sugmovie_192.png" />
